# puppet-global-plugin

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
plugin/: Makefile.am  errnum.h  file.c  file.h  pp_parser.y  pp_scanner.l  puppet.c  stack.c  stack.h  symbol.c  symbol.h
tests/: Makefile.am  checkit.c  t-class.pp  t-class.result  t-define.pp  t-define.result  t-type.pp  t-type.result  testrunner.sh
